# clipment

./: .gitignore  Cargo.toml
src/: cache.rs  file.rs  main.rs  state.rs  ui_modules.rs  user_settings.rs
src/file/: thumbnail.rs
src/ui_modules/: settings.rs  tool_panel.rs  video_item.rs
src/utils/: logger.rs
