[package]
name = "clipment"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"


[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
dirs = "5.0.1"
eframe = "0.29.0"
egui = "0.29.0"
ffmpeg-next = "7.0.4"
image = "0.25.2"
rfd = "0.15.0"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
sysinfo = "0.31.4"
tokio = "1.40.0"
